--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Perspective</title>
+    <title>Perspective | News</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -12,18 +12,18 @@
         </div><!-- /header -->
  
         <div data-role="content">
-            <h1>Please Select a Category</h1>
-						<form>
-						    <input type="button" data-shadow="false" value="Current Events">
-								<input type="button" data-shadow="false" value="Sports">
-								<input type="button" data-shadow="false" value="Finance">
+            <form>
+						    <input type="button" data-shadow="false" value="Hong Kong Protests">
+								<input type="button" data-shadow="false" value="Ebola Epidemic">
+								<input type="button" data-shadow="false" value="Ukraine Crisis">
+								<input type="button" data-shadow="false" value="Apple v. Samsung">
 						</form>
         </div><!-- /content -->
  
 		    <div data-role="footer">
 		        <div data-role="navbar">
 		            <ul>
-		                <li><a href="../news" data-icon="grid" class="ui-btn-active">News</a></li>
+		                <li><a href="../" data-icon="grid" class="ui-btn-active">News</a></li>
 		                <li><a href="../sports" data-icon="star">Sports</a></li>
 		                <li><a href="#" data-icon="gear">Finance</a></li>
 		            </ul>
