--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Sports#index</h1>
-<p>Find me in app/views/sports/index.html.erb</p>
+<!doctype html>
+<html>
+<head>
+    <title>Perspective | Sports </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+    <div data-role="page">
+ 
+        <div data-role="header">
+            <h1>Perspective | Sports</h1>
+        </div><!-- /header -->
+ 
+        <div data-role="content">
+            <form>
+						    <input type="button" data-shadow="false" value="All Blacks vs. Wallabies">
+								<input type="button" data-shadow="false" value="">
+								<input type="button" data-shadow="false" value="">
+								<input type="button" data-shadow="false" value="">
+						</form>
+        </div><!-- /content -->
+ 
+		    <div data-role="footer">
+		        <div data-role="navbar">
+		            <ul>
+		                <li><a href="../news" data-icon="grid">News</a></li>
+		                <li><a href="../sports" data-icon="star" class="ui-btn-active">Sports</a></li>
+		                <li><a href="../finance" data-icon="gear">Finance</a></li>
+		            </ul>
+		        </div><!-- /navbar -->
+				</div><!-- /footer -->
+    </div><!-- /page -->
+</body>
+</html>
