--- a/app/views/finance/index.html.erb
+++ b/app/views/finance/index.html.erb
@@ -1,31 +1,30 @@
 <!doctype html>
 <html>
 <head>
-    <title>Perspective | News</title>
+    <title>Perspective | Finance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div data-role="page">
  
         <div data-role="header">
-            <h1>News</h1>
+            <h1>Finance</h1>
         </div><!-- /header -->
  
         <div data-role="content">
             <form>
-						    <input type="button" data-shadow="false" value="Hong Kong Protests">
-								<input type="button" data-shadow="false" value="Ebola Epidemic">
-								<input type="button" data-shadow="false" value="Ukraine Crisis">
-								<input type="button" data-shadow="false" value="Apple v. Samsung">
+						    <input type="button" data-shadow="false" value="US Markets">
+								<input type="button" data-shadow="false" value="Japanese Markets">
+								<input type="button" data-shadow="false" value="Worldwide">
 						</form>
         </div><!-- /content -->
  
 		    <div data-role="footer">
 		        <div data-role="navbar">
 		            <ul>
-		                <li><a href="../news" data-icon="grid" class="ui-btn-active">News</a></li>
+		                <li><a href="../news" data-icon="grid">News</a></li>
 		                <li><a href="../sports" data-icon="star">Sports</a></li>
-		                <li><a href="../finance" data-icon="gear">Finance</a></li>
+		                <li><a href="../finance" data-icon="gear" class="ui-btn-active">Finance</a></li>
 		            </ul>
 		        </div><!-- /navbar -->
 				</div><!-- /footer -->
