--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -8,7 +8,7 @@
     <div data-role="page">
  
         <div data-role="header">
-            <h1>Perspective | Sports</h1>
+            <h1>Sports</h1>
         </div><!-- /header -->
  
         <div data-role="content">
