--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -25,7 +25,7 @@
 		            <ul>
 		                <li><a href="../news" data-icon="grid" class="ui-btn-active">News</a></li>
 		                <li><a href="../sports" data-icon="star">Sports</a></li>
-		                <li><a href="#" data-icon="gear">Finance</a></li>
+		                <li><a href="../finance" data-icon="gear">Finance</a></li>
 		            </ul>
 		        </div><!-- /navbar -->
 				</div><!-- /footer -->
