--- a/app/views/finance/index.html.erb
+++ b/app/views/finance/index.html.erb
@@ -8,6 +8,7 @@
     <div data-role="page">
  
         <div data-role="header">
+            <a href="../../" data-icon="home">Home</a>
             <h1>Finance</h1>
         </div><!-- /header -->
  
