--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -8,6 +8,7 @@
     <div data-role="page">
  
         <div data-role="header">
+	        	<a href="../../" data-icon="home">Home</a>
             <h1>News</h1>
         </div><!-- /header -->
  
