--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,7 +8,8 @@
     <div data-role="page">
  
         <div data-role="header">
-            <h1>Perspective</h1>
+            <a href="../../" data-icon="home">Home</a>
+						<h1>Perspective</h1>
         </div><!-- /header -->
  
         <div data-role="content">
