Basic Navigation Completed, Persistent Footer

--- a/app/views/finance/index.html.erb
+++ b/app/views/finance/index.html.erb
@@ -20,12 +20,12 @@
 						</form>
         </div><!-- /content -->
  
-		    <div data-role="footer">
+		    <div data-role="footer" data-position="fixed">
 		        <div data-role="navbar">
 		            <ul>
-		                <li><a href="../news" data-icon="grid">News</a></li>
+		                <li><a href="../news" data-icon="search">News</a></li>
 		                <li><a href="../sports" data-icon="star">Sports</a></li>
-		                <li><a href="../finance" data-icon="gear" class="ui-btn-active">Finance</a></li>
+		                <li><a href="../finance" data-icon="check" class="ui-btn-active">Finance</a></li>
 		            </ul>
 		        </div><!-- /navbar -->
 				</div><!-- /footer -->
