--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -21,12 +21,12 @@
 						</form>
         </div><!-- /content -->
  
-		    <div data-role="footer">
+		    <div data-role="footer" data-position="fixed">
 		        <div data-role="navbar">
 		            <ul>
-		                <li><a href="../news" data-icon="grid" class="ui-btn-active">News</a></li>
+		                <li><a href="../news" data-icon="search" class="ui-btn-active">News</a></li>
 		                <li><a href="../sports" data-icon="star">Sports</a></li>
-		                <li><a href="../finance" data-icon="gear">Finance</a></li>
+		                <li><a href="../finance" data-icon="check">Finance</a></li>
 		            </ul>
 		        </div><!-- /navbar -->
 				</div><!-- /footer -->
