--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -15,18 +15,18 @@
         <div data-role="content">
             <h1>Please Select a Category</h1>
 						<form>
-						    <input type="button" data-shadow="false" value="Current Events">
-								<input type="button" data-shadow="false" value="Sports">
-								<input type="button" data-shadow="false" value="Finance">
+						    <a href="../news"><input type="button" data-shadow="false" value="Current Events"></a>
+								<a href="../sports"><input type="button" data-shadow="false" value="Sports"></a>
+								<a href="../finance"><input type="button" data-shadow="false" value="Finance"></a>
 						</form>
         </div><!-- /content -->
  
-		    <div data-role="footer">
+		    <div data-role="footer" data-position="fixed">
 		        <div data-role="navbar">
 		            <ul>
-		                <li><a href="../news" data-icon="grid" class="ui-btn-active">News</a></li>
+		                <li><a href="../news" data-icon="search">News</a></li>
 		                <li><a href="../sports" data-icon="star">Sports</a></li>
-		                <li><a href="../finance" data-icon="gear">Finance</a></li>
+		                <li><a href="../finance" data-icon="check">Finance</a></li>
 		            </ul>
 		        </div><!-- /navbar -->
 				</div><!-- /footer -->
