--- a/app/views/news/countries.html.erb
+++ b/app/views/news/countries.html.erb
@@ -9,7 +9,7 @@
  
         <div data-role="header">
 	        	<a href="../../" data-icon="home">Home</a>
-            <h1>News</h1>
+            <h1>Countries</h1>
         </div><!-- /header -->
  
         <div data-role="content">
