--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,7 +13,7 @@
         </div><!-- /header -->
  
         <div data-role="content">
-            <h1>Please Select a Category</h1>
+            <h1>Select a Category</h1>
 						<form>
 						    <a href="../news"><input type="button" data-shadow="false" value="Current Events"></a>
 								<a href="../sports"><input type="button" data-shadow="false" value="Sports"></a>
